fix(register): unwanted autocomplete on firefox

--- a/src/styles/form.sass
+++ b/src/styles/form.sass
@@ -16,31 +16,6 @@
     margin-bottom: 10px
     text-transform: uppercase
 
-// separate preview icon from potential client password app
-.input-field
-  display: flex
-  align-items: center
-  position: relative
-  border-radius: $border-radius
-  border: 0.1px solid $border-primary
-  transition: border, box-shadow .2s
-
-  &:hover
-    border: 1px solid $border-input-active
-
-  &.is-active
-    box-shadow: 0 0 6px 3px $cool-blue
-
-  input
-    border: transparent
-
-  img
-    height: 12px
-    margin: 0 8px 0 3px
-    bottom: 14px
-    cursor: pointer
-    background-color: $white
-
 .input
   -moz-appearance: none
   -webkit-appearance: none
@@ -82,3 +57,31 @@
 
     &::-webkit-outer-spin-button, &::-webkit-inner-spin-button
       -webkit-appearance: none
+
+// separate preview icon from potential client password app
+.input-field
+  display: flex
+  align-items: center
+  position: relative
+  border-radius: $border-radius
+  border: 0.1px solid $border-primary
+  transition: border, box-shadow .2s
+
+  &:hover
+    border: 1px solid $border-input-active
+
+  &.is-active
+    box-shadow: 0 0 6px 3px $cool-blue
+
+  .input
+    border: 1px solid transparent
+
+    &:hover
+      border: 1px solid transparent
+
+  img
+    height: 12px
+    margin: 0 8px 0 3px
+    bottom: 14px
+    cursor: pointer
+    background-color: $white
